fixed formatting issue in css when screen size was too small (removed media query)

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ body {
 }
 
 /* Always have at bottom to override prior code */
-@media screen and (max-width: 1500px) {
+/* @media screen and (max-width: 1500px) {
   .container {
     margin: auto 10px;
   }
-}
+} */
